<resources>
    <string name="app_name">NerdGolf</string>
    <string name="new_game_button_label">New Game</string>
    <string name="records_button_label">Records</string>
    <string name="course_name_hint">Course Name</string>
    <string name="total_number_holes_label"># of Holes</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="start_game_button_label">Start</string>
    <string name="delete_button_label">Delete</string>
    <string name="next_button_label">Next</string>
    <string name="prev_button_label">Prev</string>
    <string name="finish_game_button_label">Finish</string>
    <string name="increase_score_button_label">+</string>
    <string name="decrease_score_button_label">-</string>
    <string name="no_games_label">No Games</string>
    <string name="me">By Taylor Stubbs</string>
    <string name="par">Par</string>
    <string name="score">Score</string>
    <string name="slash">/</string>
</resources>
