<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Jan 1st 2017 3:27pm"/>

    <TextView
        android:id="@+id/course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="May Simmons"/>

    <TextView
        android:id="@+id/total_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="73"/>

    <TextView
        android:id="@+id/total_par"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="94"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/hole_list"
        android:layout_width="match_parent"
        android:layout_height="200px"/>

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button_label" />

    <Button
        android:id="@+id/next_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button_label"/>

    <Button
        android:id="@+id/prev_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_button_label"/>

</LinearLayout>